Update VoterFaceService.java